align score and audio contour

--- a/sketch-03/style.css
+++ b/sketch-03/style.css
@@ -3,4 +3,5 @@
     font-family: "Jost", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
+    font-size: 0.65rem;
     font-style: normal; }
