--- a/sketch-07/style.css
+++ b/sketch-07/style.css
@@ -1,6 +1,49 @@
+.chart-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.svg {
+    overflow: hidden;
+}
 
 .jost-regular {
     font-family: "Jost", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal; }
+
+
+.lyrics {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: left;
+    text-wrap: normal;
+}
+
+.lato-regular {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.lato-bold {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+  
+#tooltip{
+    white-space: pre;
+    background-color: whitesmoke;
+    border: 0.15rem solid lightgrey;
+    padding: 10px 15px;
+    border-radius: 0.2rem;
+    z-index: 100;
+    font-family: "Lato";
+    font-weight: 400;
+}
+
+.responsive-text {
+    font-size: 0.75em;
+}
