fix bug zoom semantic

--- a/sketch-07/style.css
+++ b/sketch-07/style.css
@@ -6,6 +6,7 @@
 
 .svg {
     overflow: hidden;
+    position: fixed;
 }
 
 .jost-regular {
@@ -19,6 +20,42 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: left;
     text-wrap: normal;
+}
+
+
+.montserrat-reglar {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.montserrat-regular {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.montserrat-medium {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.montserrat-semibold {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.montserrat-bold {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .lato-regular {
